--- a/src/components/ArtworkPreview/index.css
+++ b/src/components/ArtworkPreview/index.css
@@ -4,13 +4,14 @@
   max-width: 40rem;
   margin: 1rem auto;
   padding: 1rem 0;
-  
+
 }
 
 .title {
   align-self: center;
-  font-size: 1.2rem;
-  font-weight: 900;
+  width:100%;
+  line-height: 0;
+  display: block;
 }
 
 .meta {
@@ -33,5 +34,8 @@
   text-decoration: none !important;
 }
 .imgt{
+  width: 100%;
+}
+.imgwrapper{
   width: 100%;
 }
