--- a/src/layouts/Artwork/index.css
+++ b/src/layouts/Artwork/index.css
@@ -1,6 +1,6 @@
 .img{
 	width: 100%;
-	margin-bottom: 5px;
+	
 }
 
 .txt {
@@ -8,8 +8,7 @@
     font-size: 12px;
     letter-spacing: .1em;
     line-height: 17px;
-    margin-bottom: 1.2em;
-    margin-top: 3em;
+    margin: 3em 3em 3em 1.1em;
 }
 em {
     opacity: .6;
